--- a/src/common/style/basestyle.scss
+++ b/src/common/style/basestyle.scss
@@ -7,6 +7,7 @@ $layout-tag-height: 34px;
 $layout-background-color: #F90;
 $layout-font-color: #fff;
 $layout-header-height: 50px;
+$layout-sider-height: calc(100vh - 50px);
 $layout-sider-width: 200px;
 $layout-sider-hide-width: 60px;
 $layout-sider-color: #bfcbd9;
