--- a/src/common/style/basestyle.scss
+++ b/src/common/style/basestyle.scss
@@ -4,7 +4,7 @@ $primary-color: #6959CD;
 /* 系统布局css */
 $layout-nav-height: 50px;
 $layout-tag-height: 34px;
-$layout-background-color: #F90;
+$layout-background-color: linear-gradient(to right, #4f83fb, #4a66ed);
 $layout-font-color: #fff;
 $layout-header-height: 50px;
 $layout-sider-height: calc(100vh - 50px);
